--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^8.0.1",
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0"
+    "mongoose": "^8.17.0",
+    "multer": "^2.0.2"
   }
 }
