--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "firebase": "^12.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "three": "^0.182.0",
